--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -7,6 +7,8 @@ title = "०३ मदनदहनः"
 
 तृतीयः सर्गः  
 
+
+## काम-प्राश्नः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्मिन् मघोनस् त्रिदशान् **विहाय**  
@@ -33,8 +35,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स वासवेनासनसंनिकृष्टमितो निषीदेति विसृष्टभूमिः ।  
-भर्तुः प्रसादं प्रतिनन्द्य मूर्ध्ना वक्तुं मिथः प्राक्रमतैवमेनम् ॥ 3.2 ॥  
+स वासवेन+"आसन-संनिकृष्टम्  
+इतो निषीदे"ति विसृष्ट-भूमिः ।  
+भर्तुः प्रसादं प्रतिनन्द्य मूर्ध्ना  
+**वक्तुं** मिथः **प्राक्रमतैवम्** एनम् ॥ 3.2 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -55,8 +59,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-आज्ञापय ज्ञातविशेष ! पुंसां लोकेषु यत्ते करणीयमस्ति ।  
-अनुग्रहं संस्मरणप्रवृत्तमिच्छामि संवर्धितमाज्ञया ते ॥ 3.3 ॥  
+**आज्ञापय** ज्ञात-विशेष ! पुंसां  
+लोकेषु यत् ते करणीयम् अस्ति ।  
+अनुग्रहं संस्मरण-प्रवृत्तम्  
+**इच्छामि संवर्धितम्** आज्ञया ते ॥ 3.3 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -77,14 +83,16 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-केनाभ्यसूया पदकाङ्क्षिणा ते नितान्तदीर्घैर्जनिता तपोभिः ।  
-यावद्‌भवत्याहितसायकस्य मत्कार्मुकस्यास्य निदेशवर्ते ॥ 3.4 ॥  
+**केनाभ्यसूया** पद-काङ्क्षिणा ते  
+नितान्त-दीर्घैर् **जनिता** तपोभिः ।  
+यावद् **‌भवत्य्** आहित-सायकस्य  
+मत्-कार्मुकस्यास्य **निदेश-वर्ती** ॥ 3.4 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 केनाभ्यसूया पदकाङ्क्षिणा ते नितान्तदीर्घैर्जनिता तपोभिः ।  
-यावद्‌भवत्याहितसायकस्य मत्कार्मुकस्यास्य निदेशवर्ते ॥ 3.4 ॥  
+यावद्‌भवत्याहितसायकस्य मत्कार्मुकस्यास्य निदेशवर्ती ॥ 3.4 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -95,20 +103,22 @@ title = "०३ मदनदहनः"
 <details><summary>मल्लिनाथः</summary>
 
 केनेति ॥ पदकाङ्क्षिणा स्वाराज्यकामेन केन पुंसा नितान्तदीर्घैरतिप्रभूतैस्तपोभिस्ते तवाभ्यसूयेर्ष्या जनिता । तं ब्रूहीति शेषः । किमर्थम् । यावद्यतः स भवद्वैर्याहितसायकस्य संहितबाणस्यास्य मत्कार्मुकस्य निदेशे वर्तत इति निदेशवर्त्याज्ञावशो भवति । अविलम्बेनैव भविष्यतीत्यर्थः । 'वर्तमानसामीप्ये वर्तमानवद्वा' इति लट् ॥ 3.4 ॥
+
+संप्रति चतुर्वर्गे मोक्षसधिकृत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-संप्रति चतुर्वर्गे मोक्षसधिकृत्याह-  
-असंमतः कस्तव मुक्तिमार्गं पुनर्भवक्लेशभयात्प्रपन्नः ।  
-बद्धश्चिरं तिष्ठतु सुन्दरीणा मारेचितभ्रूचतुरैः कटाक्षैः ॥ 3.5 ॥  
+असंमतः **कस्** तव मुक्ति-मार्गं  
+पुनर्-भव-क्लेश-भयात् प्रपन्नः ।  
+**बद्धश्** चिरं **तिष्ठतु** सुन्दरीणाम्  
+आरेचित+++(=कम्पित)+++-भ्रू-चतुरैः कटाक्षैः ॥ 3.5 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-संप्रति चतुर्वर्गे मोक्षसधिकृत्याह-  
 असंमतः कस्तव मुक्तिमार्गं पुनर्भवक्लेशभयात्प्रपन्नः ।  
-बद्धश्चिरं तिष्ठतु सुन्दरीणा मारेचितभ्रूचतुरैः कटाक्षैः ॥ 3.5 ॥  
+बद्धश्चिरं तिष्ठतु सुन्दरीणामारेचितभ्रूचतुरैः कटाक्षैः ॥ 3.5 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -119,20 +129,22 @@ title = "०३ मदनदहनः"
 <details><summary>मल्लिनाथः</summary>
 
 असंमत इति ॥ तवासंमतः कः पुनर्भवः पुनरुत्पत्तिः । संसार इति यावत् । तत्र ये क्लेशा जन्मजरामरणादयस्तेभ्यो भयान्मुक्तिमार्गं प्रपन्नस्तं वद । यतः सोऽप्यारेचिताभिरेकैशो विवर्तिताभिर्भ्रूभिश्चतुरैः सुन्दरीणां कटाक्षैर्बद्धश्चिरं तिष्टतु । आरेचितलक्षणं तु- 'स्याद्‌भ्रुवोर्ललिताक्षेपादेकस्या एव रेचितम् । तयोर्मूलसमुत्क्षेपं कौटिल्याद्‌भ्रूकुटिर्विदुः ॥' इति ॥ 3.5 ॥
+
+धर्मार्थावधिकृत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-धर्मार्थावधिकृत्याह-  
-अध्यापितस्योशनसापि नीतिं प्रयुक्तराग प्रणीधिद्विषस्ते ।  
-कस्यार्थधमौ वद पीडयामि सिन्धोस्तटावोघ इव प्रवृद्धः ॥ 3.6 ॥  
+अध्यापितस्योशनसा ऽपि नीतिं  
+प्रयुक्त-राग-प्रणिधिर्+++(=दूतः)+++ द्विषस् ते ।  
+**कस्यार्थ-धर्मौ** वद **पीडयामि**  
+सिन्धोस् तटाव् ओघ इव प्रवृद्धः ॥ 3.6 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-धर्मार्थावधिकृत्याह-  
-अध्यापितस्योशनसापि नीतिं प्रयुक्तराग प्रणीधिद्विषस्ते ।  
-कस्यार्थधमौ वद पीडयामि सिन्धोस्तटावोघ इव प्रवृद्धः ॥ 3.6 ॥  
+अध्यापितस्योशनसापि नीतिं प्रयुक्तरागप्रणिधिर्द्विषस्ते ।  
+कस्यार्थधर्मौ वद पीडयामि सिन्धोस्तटावोघ इव प्रवृद्धः ॥ 3.6 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -142,21 +154,25 @@ title = "०३ मदनदहनः"
 
 <details><summary>मल्लिनाथः</summary>
 
-अध्यापितस्येति ॥ उशनसा शुक्रेण नीतिं नीतिशास्त्रमध्यापितस्यापि अपि शब्दाच्छुकशिष्याणामप्रधृष्यत्वं गम्यते । 'गतिबुद्धि-' इत्यादिना द्विकर्मकादिण्धातोर्ण्यन्तात्प्रधाने कर्मणि क्तः 'अप्रधाने दुहादीनां ण्यन्ते कर्तुश्च कर्मणाः' ।इति वचनात् । ते द्विषस्तव शत्रोः कस्यार्थधर्मौ प्रयुक्तः प्रहितो रागो विषयाभिलाष एव प्रणिधिर्बूतो येन सोऽहम् । 'प्रर्थने प्रणिधिः चरे' इति यादवः । प्रवृद्ध ओघः सिन्धोर्नद्यास्तटाविव पौडयामि वद ॥ 3.6 ॥
+अध्यापितस्येति ॥ **उशनसा** शुक्रेण **नीतिं** नीतिशास्त्रम् **अध्यापितस्यापि** - **अपि**-शब्दाच् छुकशिष्याणाम् अप्रधृष्यत्वं गम्यते । 'गतिबुद्धि-' इत्यादिना द्विकर्मकादिण्धातोर्ण्यन्तात्प्रधाने कर्मणि क्तः 'अप्रधाने दुहादीनां ण्यन्ते कर्तुश्च कर्मणाः' ।इति वचनात् । 
+
+**ते द्विषस्** तव शत्रोः **कस्यार्थधर्मौ** प्रयुक्तः प्रहितो रागो विषयाभिलाष एव प्रणिधिर् दूतो येन सोऽहम् । 'प्रर्थने प्रणिधिः चरे' इति यादवः । **प्रवृद्ध ओघः** सिन्धोर् नद्यास् **तटाविव** पौडयामि वद ॥ 3.6 ॥
+
+काममधिकृत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-काममधिकृत्याह-  
-कामेकपत्नीव्रतदुःखशोलां लोलं मनश्चारुतया प्रविष्टाम् ।  
-नितम्बिनोमिच्छसि मुक्तलज्जां कण्ठे स्वयंग्राहनिषक्तबाहुम् ॥ 3.7 ॥  
+**काम्** एकपत्नी-व्रत-दुःख-शोलां  
+लोलं मनश् चारुतया प्रविष्टाम् ।  
+नितम्बिनीम् **इच्छसि** मुक्तलज्जां  
+कण्ठे स्वयं-ग्राह-निषक्त-बाहुम् ॥ 3.7 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-काममधिकृत्याह-  
 कामेकपत्नीव्रतदुःखशोलां लोलं मनश्चारुतया प्रविष्टाम् ।  
-नितम्बिनोमिच्छसि मुक्तलज्जां कण्ठे स्वयंग्राहनिषक्तबाहुम् ॥ 3.7 ॥  
+नितम्बिनीमिच्छसि मुक्तलज्जां कण्ठे स्वयंग्राहनिषक्तबाहुम् ॥ 3.7 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -167,18 +183,26 @@ title = "०३ मदनदहनः"
 <details><summary>मल्लिनाथः</summary>
 
 कामिति । एकः पतिर्यस्याः सैकपत्नी पतिव्रता । 'नित्यं सपत्न्यादिषु' इति ङीप् । तस्या व्रतं पातिव्रत्यं तेन दुःखशीलां दुशस्वभावाम् । दृढव्रतामित्यर्थः । 'शीलं स्वभावे सद्‌वृत्ते' इत्यमरः । चारुतया सुन्दरत्वेन हेतुना लोलं मनस्त्वच्चितं प्रविष्टां कां नितम्बिनीं नारीं मुक्तलज्जां सतीं कण्ठे स्वयंग्राहनिषक्तबाहुम् । स्वयं गृह्णातीति स्वयंग्राहा । 'विभाषा ग्रहः' इति णप्रत्ययः । न च जलचर एव ग्राह इति नियमः । जलचरे ग्राह एवेति नियमादिति । स्वयंग्राहा च सा निषक्तबाहुश्च तां तथाभृतामिच्छसि । त्वदर्थे पतिव्रतामपि व्रताद्‌भ्रंशयिष्यामीत्यर्थः ॥ एतच्चेन्द्रस्य पारदारिकत्वादुक्तम् । तया च श्रुतिः-- 'अहल्यायै जारः' इति ॥ 3.7 ॥
+
+त्रिविधा नायिका । स्वकीया परकीया साधारणी चेति । तत्र परकीयां प्रत्युक्तम् । इतरे प्रत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-त्रिविधा नायिका । स्वकीया परकीया साधारणी चेति । तत्र परकीयां प्रत्युक्तम् । इतरे प्रत्याह-  
-कयासि कामिन् सुरतापराधात्पादानतः कोपनयावधूतः ।  
-यस्याः करिष्यामि दृढानुतापं प्रवालशाय्याशरणं शरीरम् ॥ 3.8 ॥  
+**कयासि** कामिन् सुरतापराधात्  
+पादानतः कोपनया **ऽवधूतः** ।  
+यस्याः **करिष्यामि** दृढानुतापं  
+प्रवाल-शाय्या-शरणं शरीरम् ॥ 3.8 ॥+++(4)+++  
 </details>
+
+<details><summary>विश्वास-टिप्पनी</summary>
+
+एतादृशीं शय्यां रचयन्ति स्म वेति संशयः!!?
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-त्रिविधा नायिका । स्वकीया परकीया साधारणी चेति । तत्र परकीयां प्रत्युक्तम् । इतरे प्रत्याह-  
 कयासि कामिन् सुरतापराधात्पादानतः कोपनयावधूतः ।  
 यस्याः करिष्यामि दृढानुतापं प्रवालशाय्याशरणं शरीरम् ॥ 3.8 ॥  
 </details>
@@ -195,8 +219,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रसीद विश्राम्यतु वीर ! वज्रं शरैर्मदीयैः कतमः सुरारिः ।  
-बिभेतु मोघीकृतबाहुवीर्यः स्त्रीभ्योऽपि सोपस्फुरिताधराभ्यः ॥ 3.9 ॥  
+**प्रसीद**, **विश्राम्यतु** वीर ! वज्रं,  
+शरैर् मदीयैः कतमः सुरारिः ।  
+**बिभेतु** मोघी-कृत-बाहु-वीर्यः  
+स्त्रीभ्योऽपि सोपस्फुरिताधराभ्यः ॥ 3.9 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -217,14 +243,16 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तव प्रसादात्कुसुमायुधोऽपु सहायमेकं मधुमेव लब्ध्वा ।  
-कुर्यां हरस्यापि पिनाकपाणेर्धैर्यच्युतिं के मम धन्विनोऽन्ये ॥ 3.10 ॥  
+तव प्रसादात् कुसुमायुधो ऽपि  
+सहायम् एकं मधुम् एव लब्ध्वा ।  
+कुर्यां हरस्यापि पिनाक-पाणेर्  
+धैर्य-च्युतिं के मम धन्विनो ऽन्ये ॥ ३।१०॥
 </details>
 
 <details><summary>मूलम्</summary>
 
-तव प्रसादात्कुसुमायुधोऽपु सहायमेकं मधुमेव लब्ध्वा ।  
-कुर्यां हरस्यापि पिनाकपाणेर्धैर्यच्युतिं के मम धन्विनोऽन्ये ॥ 3.10 ॥  
+तव प्रसादात्कुसुमायुधो ऽपि सहायमेकं मधुमेव लब्ध्वा ।  
+कुर्यां हरस्यापि पिनाकपाणेर्धैर्यच्युतिं के मम धन्विनो ऽन्ये ॥ ३।१०॥
 </details>
 
 <details><summary>अन्वयः</summary>
