--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -244,9 +244,9 @@ title = "०३ मदनदहनः"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तव प्रसादात् कुसुमायुधो ऽपि  
-सहायम् एकं मधुम् एव लब्ध्वा ।  
-कुर्यां हरस्यापि पिनाक-पाणेर्  
-धैर्य-च्युतिं के मम धन्विनो ऽन्ये ॥ ३।१०॥
+**सहायम्** एकं मधुम् एव **लब्ध्वा** ।  
+**कुर्यां** हरस्यापि पिनाक-पाणेर्  
+धैर्य-च्युतिं! के मम धन्विनो ऽन्ये ॥ ३।१०॥+++(र5)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -265,10 +265,13 @@ title = "०३ मदनदहनः"
 तवेतिस ॥ किं बहुना, तव प्रसादादनुग्रहात्कुसुमायुधोऽप्यतिदुर्बलास्त्रोऽप्यहमेकं मधुं वसन्तमेव सहायं लब्ध्वा पिनाकः पाणौ यस्य स पिनाकपाणिः । 'प्रहरणार्थेभ्यः परे निष्ठासप्तम्यौ' । हरस्यापि । हरः पिनाकी चेत्यतिदारुण इति भावः । धैर्यच्युतिं धैर्यरानिं कुर्याम् । कर्तु शक्नुयामित्यर्थः । 'शकि लिङ् च' इति शक्यार्थे लिङ् । अन्ये धन्विनो धनुर्भृते मम के । न केऽपीत्यर्थः । किंशब्दः कुत्सायाम् । 'कुत्साप्रश्नवितर्केषु क्षेपे किंशब्द इष्यते' इति शाश्वतः ॥ 3.10 ॥
 </details>
 
+## इन्द्रादेशः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथोरुदेशादवतार्य पाद माक्रान्तिसंभावितपादपीठम् ।  
-संकल्पितार्थे विवृतात्मशक्तिमाखण्डलः काममिदं बभाषे ॥ 3.11 ॥  
+अथोरुदेशाद् **अवतार्य पादम्** 
+आक्रान्ति-संभावित-पाद-पीठम् ।  
+संकल्पितार्थे विवृतात्म-शक्तिम्  
+आखण्डलः कामम् इदं **बभाषे** ॥ 3.11 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -289,13 +292,15 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सर्वं सखे ! त्वय्युपपन्नमेतदुभे ममास्त्रे कुलिशं भवाश्च ।  
-वज्रं तपोवीर्यमहत्सु कुण्ठं त्वं सर्वतोगामि च साघकं च ॥ 3.12 ॥  
+सर्वं सखे ! त्वय्य् उपपन्नम् एतद्,  
+**उभे ममास्त्रे** कुलिशं भवांश्च ।  
+वज्रं तपो-वीर्य-महत्सु कुण्ठं,  
+त्वं सर्वतो-गामि च साघकं च ॥ 3.12 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सर्वं सखे ! त्वय्युपपन्नमेतदुभे ममास्त्रे कुलिशं भवाश्च ।  
+सर्वं सखे ! त्वय्युपपन्नमेतदुभे ममास्त्रे कुलिशं भवांश्च ।  
 वज्रं तपोवीर्यमहत्सु कुण्ठं त्वं सर्वतोगामि च साघकं च ॥ 3.12 ॥  
 </details>
 
@@ -313,8 +318,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अवैमि ते सारमतः खलु त्वां कार्ये गुरुण्यात्मसमं नियोक्ष्ये ।  
-व्यादिश्यते भूधरतामवेक्ष्य कृष्णेन देहोद्वहनाय शेषः ॥ 3.13 ॥  
+**अवैमि** ते सारम् अतः खलु त्वां  
+कार्ये गुरुण्य् आत्म-समं नियोक्ष्ये ।  
+**व्यादिश्यते** भू-धरताम् **अवेक्ष्य**  
+कृष्णेन +++(विष्णुना)+++ देहोद्वहनाय शेषः ॥ 3.13 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -331,44 +338,52 @@ title = "०३ मदनदहनः"
 <details><summary>मल्लिनाथः</summary>
 
 अवैमीति ॥ हे सखे, ते सारं बलमवैमि वेद्मि । अतः खल्वत एवात्मसमं मत्तुल्यं त्वां गुरुणि महति कार्ये 'तस्मै हिमाद्रेः-' (3/16) इति वक्ष्यमाणे नियोक्ष्ये । 'स्वराद्यन्तोपसर्गादिति वक्तव्यम्' इति वार्तिकादात्मनेपदनियमः । तथाहि । सारपरीक्षापूर्वक एव सर्वत्र नियोग इत्याह- कृष्णेन विष्णुना । धरतीति धरः । पचाद्यच् । भुवो धरो भूधरस्तस्य भावस्तत्तां भूधरताम् । भूधरणशक्तिमित्यर्थः । अवेक्ष्य ज्ञात्वा शेषः सर्पराजो देहोद्वहनाय स्वदेहमुद्वोढुम् । 'क्रियार्थोपपदस्य-' इत्यादिना चतुर्थी । व्यादिश्यते नियुज्यते । शेषशायी हि भगवान् ॥ 3.13 ॥
+
+नियोगाङ्गीकारं सिद्धवत्कर्तुमाह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-नियोगाङ्गीकारं सिद्धवत्कर्तुमाह-  
-आशसता बाणगतिं वृषाङ्के कार्यं त्वया नः प्रतिपन्नकल्पम् ।  
-निबोध यज्ञांशभुजामिदानीमुच्चैर्द्विषामीप्सितमेतदेव ॥ 3.14 ॥  
+आशंसता बाणगतिं वृषाङ्के  
+**कार्यं** त्वया नः **प्रतिपन्न-कल्पम्** ।  
+**निबोध** यज्ञांश-भुजाम् इदानीम्  
+उच्चैर्-द्विषाम् ईप्सितम् एतद् एव ॥ 3.14 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-नियोगाङ्गीकारं सिद्धवत्कर्तुमाह-  
-आशसता बाणगतिं वृषाङ्के कार्यं त्वया नः प्रतिपन्नकल्पम् ।  
+आशंसता बाणगतिं वृषाङ्के कार्यं त्वया नः प्रतिपन्नकल्पम् ।  
 निबोध यज्ञांशभुजामिदानीमुच्चैर्द्विषामीप्सितमेतदेव ॥ 3.14 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-हे मित्र ! वृषाङके बाणगतिम् आशंसता त्वया नः कार्य प्रतिपन्नकल्पम् । इदानीम् उच्चैद्वषां यज्ञांऽशभुजाम् ईप्सितम् एतत् एव निबोध ॥ 3.14 ॥  
+हे मित्र ! वृषाङके बाणगतिम् आशंसता त्वया नः कार्य प्रतिपन्नकल्पम् । इदानीम् उच्चैर्द्विषाम् यज्ञांऽशभुजाम् ईप्सितम् एतत् एव निबोध ॥ 3.14 ॥  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-आशंसतेति ॥ वृषाङ्केहरे बाणगतिं बाणाप्रसरमाशंसता कथयता । 'कुर्यां हरस्यापि पिनाकपाणेः' (3/10) इत्यादिनेति शेषः । त्वया नोऽस्माकं कार्यं प्रतिपन्नकल्पमङ्गीकृतप्रायम् । 'ईषदसमात्पौ-' इत्यादिना कल्पप्रत्ययः । कथमेतदित्याह- इदानीमुच्चैरुन्नता द्विषो येषां तेषामुच्चैद्विषां यज्ञांशभुजां देवानाम् । एतेन द्विषल्लत्पयज्ञभागत्वं सूच्यते । ईप्सितमाप्तुमिष्टमेतदेव हरे बाणप्रयोगरूपमेव निबोध । हरायत्तं बुद्ध्यस्वेत्यर्थः । 'बुध बोधने' इति धातोर्लोट् । अत्र 'आशंसता प्रार्थयमानेन' इति नाथव्याख्यानमनाथव्याख्यानम् । आङ्पूर्वयोः शास्तिशंसत्योरिच्छार्थत्वे आत्मनेपदनियमात् । याच्‌ञार्थत्वस्याप्रामाणिकत्वात् । 'कुर्यां हरस्यापि-' (3/10) इत्यत्रानयोरभावादयोगच्चेति ॥ 3.14 ॥
+आशंसतेति ॥ वृषाङ्केहरे बाणगतिं बाणाप्रसरमाशंसता कथयता । 'कुर्यां हरस्यापि पिनाकपाणेः' (3/10) इत्यादिनेति शेषः । त्वया नोऽस्माकं कार्यं प्रतिपन्नकल्पमङ्गीकृतप्रायम् । 'ईषदसमात्पौ-' इत्यादिना कल्पप्रत्ययः । 
+
+कथमेतदित्याह- 
+
+इदानीम् उच्चैर् उन्नता द्विषो येषां तेषाम् **उच्चैद्विषां यज्ञांशभुजां** देवानाम् । एतेन द्विषल्लत्पयज्ञभागत्वं सूच्यते । ईप्सितमाप्तुमिष्टमेतदेव हरे बाणप्रयोगरूपमेव निबोध । हरायत्तं बुद्ध्यस्वेत्यर्थः । 'बुध बोधने' इति धातोर्लोट् । अत्र 'आशंसता प्रार्थयमानेन' इति नाथव्याख्यानमनाथव्याख्यानम् । आङ्पूर्वयोः शास्तिशंसत्योरिच्छार्थत्वे आत्मनेपदनियमात् । याच्‌ञार्थत्वस्याप्रामाणिकत्वात् । 'कुर्यां हरस्यापि-' (3/10) इत्यत्रानयोरभावादयोगच्चेति ॥ 3.14 ॥
+
+किं तत्कार्यं कथं वा तस्य हरायत्तत्वं कुतो वा मदपेक्षेत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-किं तत्कार्यं कथं वा तस्य हरायत्तत्वं कुतो वा मदपेक्षेत्याह-  
-अमी हि वीर्यप्रभवं भवस्य जयाय सेनान्यमुशन्ति देवाः ।  
-स च त्वदेकेषुनिपातसाध्यो ब्रह्माङ्गभू र्ब्रह्मणि योजितात्मा ॥ 3.15 ॥  
+अमी हि वीर्य-प्रभवं भवस्य  
+जयाय **सेनान्यम् उशन्ति** देवाः ।  
+स च त्वद्-एकेषु-निपात-साध्यो  
+ब्रह्माङ्ग-भूर् ब्रह्मणि योजितात्मा ॥ 3.15 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-किं तत्कार्यं कथं वा तस्य हरायत्तत्वं कुतो वा मदपेक्षेत्याह-  
 अमी हि वीर्यप्रभवं भवस्य जयाय सेनान्यमुशन्ति देवाः ।  
-स च त्वदेकेषुनिपातसाध्यो ब्रह्माङ्गभू र्ब्रह्मणि योजितात्मा ॥ 3.15 ॥  
+स च त्वदेकेषुनिपातसाध्यो ब्रह्माङ्गभूर्ब्रह्मणि योजितात्मा ॥ 3.15 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -378,13 +393,17 @@ title = "०३ मदनदहनः"
 
 <details><summary>मल्लिनाथः</summary>
 
-अमी इति ॥ हि यस्मादमी देवा जयाय शत्रुजयार्थ भवस्य हरस्य वीर्यप्रभवं तेजः संभूतं सेनापतिमुशन्ति कामयन्ते । 'वश कान्तौ' इति धातोर्लोट् । ब्रह्मणां सद्योजातादिमन्त्राणामङ्गानां हृदयादिमन्त्राणां भूः स्थानं ब्रह्माङ्गभूः । कृतमन्त्रन्यास इत्यर्थः । ब्रह्मणि निजतत्त्वे 'वेदस्तत्वं तपो ब्रह्म ब्रह्मा' इत्युभयत्राप्यमरः । योजितात्मा नियमितचित्तः । मन्त्रन्यासपूर्वंकं ब्रह्म ध्यायन्नित्यर्थः । स भवश्च त्वदेकेषोस्तवैकबाणस्य निपातेन साध्यः । अनन्यसाध्योऽयमस्मिन्नवसर इति भावः ॥ 3.15 ॥
+अमी इति ॥ हि यस्मादमी देवा जयाय शत्रुजयार्थ भवस्य हरस्य वीर्यप्रभवं तेजः संभूतं सेनापतिमुशन्ति कामयन्ते । 'वश कान्तौ' इति धातोर्लोट् । ब्रह्मणां सद्योजातादिमन्त्राणामङ्गानां हृदयादिमन्त्राणां भूः स्थानं ब्रह्माङ्गभूः । कृतमन्त्रन्यास इत्यर्थः । ब्रह्मणि निजतत्त्वे 'वेदस्तत्वं तपो ब्रह्म ब्रह्मा' इत्युभयत्राप्यमरः । **योजितात्मा** नियमितचित्तः । मन्त्रन्यासपूर्वंकं ब्रह्म ध्यायन्नित्यर्थः । स भवश्च त्वदेकेषोस्तवैकबाणस्य निपातेन साध्यः । अनन्यसाध्योऽयमस्मिन्नवसर इति भावः ॥ 3.15 ॥
 </details>
+
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga03-16-25.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्मै हिमाद्रेः प्रयतां तनूजां यतात्मने रोचयितुं यतस्व ।  
-योषित्सु तद्वीर्यनिषेकभूमिः सैव क्षमेत्यात्मभुवोपदिष्टम् ॥ 3.16 ॥  
+तस्मै हिमाद्रेः प्रयतां तनूजां  
+यतात्मने **रोचयितुं यतस्व** ।  
+योषित्सु तद्-वीर्य-निषेक-भूमिः  
+सैव क्षमेत्य् **आत्म-भुवोपदिष्टम्** ॥ 3.16 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -401,18 +420,20 @@ title = "०३ मदनदहनः"
 <details><summary>मल्लिनाथः</summary>
 
 तस्मा इति ॥ यतात्मने नियतचित्ताय तस्मै भवाय । 'रुच्यर्थानां प्रीयमाणः' इति संप्रदानत्वाच्चतुर्थि । प्रयतां हिमाद्रेस्तनूजां पार्वतीं रोचयितुं यतस्व । भवितव्यं चात्र पार्वत्यैवेत्याह-योषित्सु स्त्रीषु मध्ये । 'यतश्च निर्धारणम्' इति सप्तमी । क्षमा शक्ता तस्य हरस्य वीर्यं रेतस्तस्य निषेकः क्षरणं तस्य भूमिः क्षेत्रं सा पार्वत्येवेत्यात्मभुवा ब्रह्मणोपदिष्टम् । 'उभे एव क्षमे वोढुम्' (2.60) इत्यादिनोक्तमित्यर्थः ॥ 3.16 ॥
+
+सापीदानीं संनिकृष्टैव तस्येत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सापीदानीं संनिकृष्टैव तस्येत्याह-  
-गुरोर्नियोगाच्च नगेन्द्रकन्या स्थाणुं तपस्यन्तमधित्यकायाम् ।  
-अन्वास्त इत्यप्सरसां मुखेभ्यः श्रुतं मया मत्प्रणिधिः स वर्गः ॥ 3.17 ॥  
+गुरोर् नियोगाच् च नगेन्द्रकन्या  
+**स्थाणुं** तपस्यन्तम् अधित्यकायाम् ।  
+**अन्वास्त** इत्य् अप्सरसां मुखेभ्यः  
+**श्रुतं मया** - मत्-प्रणिधिः स वर्गः ॥ 3.17 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सापीदानीं संनिकृष्टैव तस्येत्याह-  
 गुरोर्नियोगाच्च नगेन्द्रकन्या स्थाणुं तपस्यन्तमधित्यकायाम् ।  
 अन्वास्त इत्यप्सरसां मुखेभ्यः श्रुतं मया मत्प्रणिधिः स वर्गः ॥ 3.17 ॥  
 </details>
@@ -429,8 +450,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तद् गच्छ सिद्ध्यै कुरु देवकार्यमर्थोऽयमर्थान्तरभाव्य एव ।  
-अपेक्षते प्रत्ययमुत्तमं त्वां बीजाङ्कुरः प्रागुदयादिवाम्भः ॥ 3.18 ॥  
+तद् **गच्छ** सिद्ध्यै, **कुरु** देव-कार्यम्,  
+अर्थोऽयम् अर्थान्तर+++(→पार्वतीसंनिधानम्)+++-भाव्य एव ।  
+**अपेक्षते प्रत्ययम्** उत्तमं त्वां  
+बीजाङ्कुरः प्राग् उदयाद् इवाम्भः ॥ 3.18 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -446,13 +469,15 @@ title = "०३ मदनदहनः"
 
 <details><summary>मल्लिनाथः</summary>
 
-तदिति ॥ तत्तस्मात्सिद्ध्यै कार्यसिद्ध्यर्थं गच्छ । देवकार्यं कुरु । आशिषिं लोट् । अयमर्थः प्रयोजनमर्थान्तरभाव्यः कारणान्तरसाध्य एव । तच्च कारणान्तरं पार्वतीसंनिधानमिति भावः । 'अर्थः प्रकारे विषमे वित्तकारणवस्तुषु । अभिधेये च शब्दानां वृत्तौ चापि प्रयोजने ।' इति विश्वः । तथापि बीजसाध्योऽङ्कुरो बीजाङ्कुरु उदयादुत्पतेः प्रागम्भ इव त्वामुत्तमं प्रत्ययं चरमं कारणमपेक्षते । 'प्रत्ययोऽधीनशपथज्ञानविश्वासहेतुषु'। इत्यमरः । तस्मादस्मिन्नर्थे तव चरमसहकारित्वादनन्यसाध्योऽयमर्थ इति भावः ॥ 3.18 ॥
+तदिति ॥ **तत्** तस्मात् **सिद्ध्यै** कार्यसिद्ध्यर्थं **गच्छ** । **देवकार्यं कुरु** । आशिषिं लोट् । **अयम् अर्थः** प्रयोजनम् **अर्थान्तरभाव्यः** कारणान्तरसाध्य एव । तच्च कारणान्तरं पार्वतीसंनिधानम् इति भावः । 'अर्थः प्रकारे विषमे वित्तकारणवस्तुषु । अभिधेये च शब्दानां वृत्तौ चापि प्रयोजने ।' इति विश्वः । तथापि बीजसाध्योऽङ्कुरो बीजाङ्कुरु उदयादुत्पतेः प्रागम्भ इव त्वामुत्तमं प्रत्ययं चरमं कारणमपेक्षते । 'प्रत्ययोऽधीनशपथज्ञानविश्वासहेतुषु'। इत्यमरः । तस्मादस्मिन्नर्थे तव चरमसहकारित्वादनन्यसाध्योऽयमर्थ इति भावः ॥ 3.18 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्मिन्सुराणां विजयाभ्युपाये तवैव नामास्त्रगतिः कृती त्वम् ।  
-अप्यप्रसिद्धं यशसे हि पुंसामनन्यसाधारणमेव कर्म ॥ 3.19 ॥  
+तस्मिन् सुराणां विजयाभ्युपाये  
+तवैव नामास्त्र-गतिः, **कृती त्वम्** ।  
++++(चेद्)+++ अप्य् अप्रसिद्धं, यशसे हि पुंसाम्  
+अनन्य-साधारणम् एव कर्म ॥ 3.19 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -468,21 +493,23 @@ title = "०३ मदनदहनः"
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्मिन्निति ॥ सुराणां विजयाभ्युपाये जयस्योपायभूते तस्मिन्हरेऽस्त्रप्रसरस्तवैव नाम । नामेति संभावनायाम् । अन्येषां तु संभावनापि नास्तीति भावः । अतस्त्वं कृती कृतार्थः । तथाहि । अप्रसिद्धमप्यनन्यसाधारणमेव कर्म पुंसां यशसे हि । इदं तु प्रसिद्धमसाधारणं चेत्यतियशस्करमिति भावः ॥ 3.19 ॥
+तस्मिन्निति ॥ सुराणां विजयाभ्युपाये जयस्योपायभूते तस्मिन्हरेऽस्त्रप्रसरस्तवैव नाम । नामेति संभावनायाम् । अन्येषां तु संभावनापि नास्तीति भावः । अतस्त्वं कृती कृतार्थः । तथाहि । अप्रसिद्धम् अप्य् अनन्यसाधारणमेव कर्म पुंसां यशसे हि । इदं तु प्रसिद्धमसाधारणं चेत्यतियशस्करमिति भावः ॥ 3.19 ॥
+
+प्रोत्साहनार्थ स्तौति-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रोत्साहनार्थ स्तौति-  
-सुराः समभ्यर्थयितार एते,कार्यं त्रयाणामपि विष्टपानाम् ।  
-चापेन ते कर्म न चातिहिंस्त्रमहो बतासि स्पृणीयवीर्यः ॥ 3.20 ॥  
+सुराः **समभ्यर्थयितार** एते,  
+**कार्यं** त्रयाणाम् अपि विष्टपानाम् ।  
+चापेन ते **कर्म** न चातिहिंस्रम्,  
+अहो बतासि **स्पृहणीय-वीर्यः** ॥ 3.20 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-प्रोत्साहनार्थ स्तौति-  
-सुराः समभ्यर्थयितार एते,कार्यं त्रयाणामपि विष्टपानाम् ।  
-चापेन ते कर्म न चातिहिंस्त्रमहो बतासि स्पृणीयवीर्यः ॥ 3.20 ॥  
+सुराः समभ्यर्थयितार एते, कार्यं त्रयाणामपि विष्टपानाम् ।  
+चापेन ते कर्म न चातिहिंस्रमहो बतासि स्पृहणीयवीर्यः ॥ 3.20 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -497,8 +524,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मधुश्च ते मन्मथ !साहचर्यादसावनुक्तोऽपि सहाय एव ।  
-समीरणो नोदयिता भवेति व्यादिश्यते केन हुताशनस्य ॥ 3.21 ॥  
+मधुश् च ते मन्मथ ! साहचर्याद्  
+असाव् अनुक्तोऽपि सहाय एव ।  
+समीरणो "नोदयिता भवे"ति  
+**व्यादिश्यते केन** हुताशनस्य ॥ 3.21 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -519,8 +548,10 @@ title = "०३ मदनदहनः"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तथेति शेषामिव भर्तुराज्ञामादाय मूर्ध्ना मदनः प्रतस्थे ।  
-ऐरावतास्फालनकर्कशेन हस्तेन पस्पर्श तदङ्गमिन्द्रः ॥ 3.22 ॥  
+तथेति +++(भुक्त-)+++शेषाम् इव भर्तुर् आज्ञाम्  
+आदाय मूर्ध्ना **मदनः प्रतस्थे** ।  
+ऐरावतास्फालन-कर्कशेन  
+हस्तेन **पस्पर्श** तद् अङ्गम् इन्द्रः ॥ 3.22 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -536,13 +567,16 @@ title = "०३ मदनदहनः"
 
 <details><summary>मल्लिनाथः</summary>
 
-तथेति ॥ तथास्त्विति भर्तुः स्वामिनः शेषामिव प्रसाददत्तां मालामिव । 'प्रसादान्निजनिर्माल्यदाने शेषेति कीर्तिता' । इति विश्वः । 'माल्याक्षतादिदाने श्त्री शेषा' इति वैजयन्तीकेशवौ । आज्ञां मूर्ध्नादाय शिरसा गृहीत्वा मदनः प्रतस्थे ।'समवप्रविभ्यः स्थः' इत्यात्मनेपदम् । इन्द्र ऐरावतास्फालनेन प्रोत्साहनार्थेन ताडनेन कर्कशेन परुषेण हस्तेन तदङ्गं मदनदेहं पस्पर्श । हस्तस्पर्शेन संभावयामासेत्यर्थः ।'शेषामिवाज्ञाम्' इत्यत्र साधकबाधकप्रमाणाभावादुपमोत्प्रेक्षयोः संदेहसंकर इति । यदि भर्त्रा शेषापि दत्ता तदा तामाज्ञामिवेत्युपमा । अथ न दत्ता तर्हि शेषात्वेनोत्प्रेक्षिता । शेषादानं तु संदिग्धमिति ॥ 3.22 ॥
+तथेति ॥ तथास्त्विति **भर्तुः** स्वामिनः **शेषाम् इव** प्रसाददत्तां मालामिव । 'प्रसादान्निजनिर्माल्यदाने शेषेति कीर्तिता' । इति विश्वः । 'माल्याक्षतादिदाने श्त्री शेषा' इति वैजयन्तीकेशवौ । आज्ञां मूर्ध्नादाय शिरसा गृहीत्वा मदनः प्रतस्थे ।'समवप्रविभ्यः स्थः' इत्यात्मनेपदम् । इन्द्र ऐरावतास्फालनेन प्रोत्साहनार्थेन ताडनेन कर्कशेन परुषेण हस्तेन तदङ्गं मदनदेहं पस्पर्श । हस्तस्पर्शेन संभावयामासेत्यर्थः ।'शेषामिवाज्ञाम्' इत्यत्र साधकबाधकप्रमाणाभावादुपमोत्प्रेक्षयोः संदेहसंकर इति । यदि भर्त्रा शेषापि दत्ता तदा तामाज्ञामिवेत्युपमा । अथ न दत्ता तर्हि शेषात्वेनोत्प्रेक्षिता । शेषादानं तु संदिग्धमिति ॥ 3.22 ॥
 </details>
 
+## प्रजिहीर्षा
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स माधवेनाभिमतेन सख्या रत्या च साशङ्कमनुप्रयातः ।  
-अङ्गव्ययप्रार्थितकार्यसिद्धिः स्थाण्वाश्रमं हैमवतं जगाम ॥ 3.23 ॥  
+स माधवेनाभिमतेन सख्या,  
+रत्या च **साशङ्कम् अनुप्रयातः** ।  
+अङ्ग-व्यय--प्रार्थित-कार्य--सिद्धिः  
+स्थाण्व्-आश्रमं हैमवतं **जगाम** ॥ 3.23 ॥+++(4 र)+++  
 </details>
 
 <details><summary>मूलम्</summary>
