--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -197,7 +197,9 @@ title = "०३ मदनदहनः"
 
 <details><summary>विश्वास-टिप्पनी</summary>
 
-एतादृशीं शय्यां रचयन्ति स्म वेति संशयः!!?
+एतादृशीं शय्यां रचयन्ति स्म वेति संशयः!!?  
+कुसुमास्तरणम् इति तु कलासु परिगण्यते … किसलयास्तरणं तदपेक्षया विशिष्टत्रम्।  
+उपचारस् तादृशः कठिन इति न - प्रीतिं मनःसौकुमार्यं चापेक्षते - विशिष्याप्तासु नायिकायाः।  
 </details>
 
 
