--- a/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/1.md
@@ -10254,556 +10254,373 @@ X१९३
 
 ## Notes
 
-[^1]:
-अस्मिन् पक्षे 'अधिगतस्वाधीननित्योन्नतिः' इत्येकं समस्तं पदम् ।
+[^1]: अस्मिन् पक्षे 'अधिगतस्वाधीननित्योन्नतिः' इत्येकं समस्तं पदम् ।
 
-[^2]:
+[^2]: 
 
+[^3]: अपि च omitted------------ka,kha
 
-[^3]:
-अपि च omitted------------ka,kha
+[^4]: नः: ---क,ग,छ
 
-[^4]:
-नः: ---क,ग,छ
+[^5]: सकल ------क
 
-[^5]:
-सकल ------क
+[^6]: किरण--omitted---ग
 
-[^6]:
-किरण--omitted---ग
+[^7]: पादपद्मस्य---च
 
-[^7]:
-पादपद्मस्य---च
+[^8]: महा omitted--ग
 
-[^8]:
-महा omitted--ग
+[^9]: चटुल omitted---ग
 
-[^9]:
-चटुल omitted---ग
+[^10]: मध्य omitted---क
 
-[^10]:
-मध्य omitted---क
+[^11]: विद्या omitted---ड
 
-[^11]:
-विद्या omitted---ड
+[^12]: कुदृष्टि added before
 
-[^12]:
-कुदृष्टि added before
+[^13]: “एतद्वै महोपनिषदं देवानां गुह्यम्” इत्युक्तप्रपदनतत्त्वोपदेशदेशिकैरिति साम्प्रदायिकोऽस्यार्थः।
 
-[^13]:
-“एतद्वै महोपनिषदं देवानां गुह्यम्” इत्युक्तप्रपदनतत्त्वोपदेशदेशिकैरिति साम्प्रदायिकोऽस्यार्थः।
+[^14]: अनवरतपरिचितगान्धर्वविद्याप्रसादितपरमपुरुषैः added before ---क,ख
 
-[^14]:
-अनवरतपरिचितगान्धर्वविद्याप्रसादितपरमपुरुषैः added before ---क,ख
+[^15]: नृगुणी---ख,ग,ड
 
-[^15]:
-नृगुणी---ख,ग,ड
+[^16]: परिगृहीता--- ग
 
-[^16]:
-परिगृहीता--- ग
+[^17]: संवर्धनस्य---क
 
-[^17]:
-संवर्धनस्य---क
+[^18]: सर्वे added before----ग
 
-[^18]:
-सर्वे added before----ग
+[^19]: देशिकैरिव-----क
 
-[^19]:
-देशिकैरिव-----क
+[^20]: अबोध---क,ख
 
-[^20]:
-अबोध---क,ख
+[^21]: अन्यभक्त्युन्मीलनीम्म्  इति प्रभावलीसंमतः पाठः ।
 
-[^21]:
-अन्यभक्त्युन्मीलनीम्म्  इति प्रभावलीसंमतः पाठः ।
+[^22]: (सप्रणामम्) added after-----ढ
 
-[^22]:
-(सप्रणामम्) added after-----ढ
+[^23]: सविनयम् omitted --------क
 
-[^23]:
-सविनयम् omitted --------क
+[^24]: नाटक omitted---ख, प; नाट्य ---ग
 
-[^24]:
-नाटक omitted---ख, प; नाट्य ---ग
+[^25]: कुशलाः omitted---क
 
-[^25]:
-कुशलाः omitted---क
+[^26]: तुह्म भासिए-- प्रभावलीसंमतः पाठः
 
-[^26]:
-तुह्म भासिए-- प्रभावलीसंमतः पाठः
+[^27]: पुच्छम्मि    --   ditto
 
-[^27]:
-पुच्छम्मि    --   ditto
+[^28]: आणत्तन्ति   ---ditto; आदिट्ठंति ---ख
 
-[^28]:
-आणत्तन्ति   ---ditto; आदिट्ठंति ---ख
+[^29]: इदं दानवीरस्याप्युपलक्षणम् । एतेन युद्धवीर दयावीर दानवीरभेदेन विविधोऽपि वीरोऽत्र वर्णितः । शान्तवीरयोः व्यतिकराच्च चित्रत्वं भाव्यम् ।
 
-[^29]:
-इदं दानवीरस्याप्युपलक्षणम् । एतेन युद्धवीर दयावीर दानवीरभेदेन विविधोऽपि वीरोऽत्र वर्णितः । शान्तवीरयोः व्यतिकराच्च चित्रत्वं भाव्यम् ।
+[^30]: न सन्त्य---ग
 
-[^30]:
-न सन्त्य---ग
+[^31]: न्त्यविरल---क,ख,ग
 
-[^31]:
-न्त्यविरल---क,ख,ग
+[^32]: यतः omitted---क,ग
 
-[^32]:
-यतः omitted---क,ग
+[^33]: हिताहितप्रयोगः:----घ
 
-[^33]:
-हिताहितप्रयोगः:----घ
+[^34]: सकौतुकम्  omitted ---क,ख,घ
 
-[^34]:
-सकौतुकम्  omitted ---क,ख,घ
+[^35]: सकल---ग
 
-[^35]:
-सकल---ग
+[^36]: देवतान्तरस्पर्शविधुरा विशुद्धयाजिसमादृता सात्त्वतनिष्ठापरिकर्मिताध्यात्मविद्येत्यर्थः।
 
-[^36]:
-देवतान्तरस्पर्शविधुरा विशुद्धयाजिसमादृता सात्त्वतनिष्ठापरिकर्मिताध्यात्मविद्येत्यर्थः।
+[^37]: विहरण-----इति प्रभावलीसंमतः पाठः
 
-[^37]:
-विहरण-----इति प्रभावलीसंमतः पाठः
+[^38]: स च ---omitted--च
 
-[^38]:
-स च ---omitted--च
+[^39]: एअस्स---च,क
 
-[^39]:
-एअस्स---च,क
+[^40]: णिम्मूलिअ-----ड,च,छ
 
-[^40]:
-णिम्मूलिअ-----ड,च,छ
+[^41]: सान्तर्हासम् omitted---च
 
-[^41]:
-सान्तर्हासम् omitted---च
+[^42]: अप्रवृत्त---घ,ड,छ
 
-[^42]:
-अप्रवृत्त---घ,ड,छ
+[^43]: तथापि---क
 
-[^43]:
-तथापि---क
+[^44]: दम्भोलि-----ख
 
-[^44]:
-दम्भोलि-----ख
+[^45]: सलिलानि---क,घ
 
-[^45]:
-सलिलानि---क,घ
+[^46]: ति मेनिरे
 
-[^46]:
-ति मेनिरे
+[^47]: अपि च ----omitted---क,ख,ड  अन्यदपि चैतदाकर्णयतु भवती यदेतदौपनि added after---ड
 
-[^47]:
-अपि च ----omitted---क,ख,ड  अन्यदपि चैतदाकर्णयतु भवती यदेतदौपनि added after---ड
+[^48]: अय्य   omitted---क,ग
 
-[^48]:
-अय्य   omitted---क,ग
+[^49]: कहं उण----ख
 
-[^49]:
-कहं उण----ख
+[^50]: णडउत्तंतेण-----ग
 
-[^50]:
-णडउत्तंतेण-----ग
+[^51]: कितु सन्ति इति प्रभावलीसंमतः पाठः
 
-[^51]:
-कितु सन्ति इति प्रभावलीसंमतः पाठः
+[^52]: ढोलन्त------क;
 
-[^52]:
-ढोलन्त------क;
+[^53]: चंचल----ख
 
-[^53]:
-चंचल----ख
+[^54]: कृञ्करणे इति धातोः यङ्लुगन्तस्य प्रथमपुरुषबहुवचने वरीव्रतु इति रूपम् ।
 
-[^54]:
-कृञ्करणे इति धातोः यङ्लुगन्तस्य प्रथमपुरुषबहुवचने वरीव्रतु इति रूपम् ।
+[^55]: अपि च ----omitted ---क,ग
 
-[^55]:
-अपि च ----omitted ---क,ग
+[^56]: समय omitted----क,ख
 
-[^56]:
-समय omitted----क,ख
+[^57]: तथापि omitted---क
 
-[^57]:
-तथापि omitted---क
+[^58]: विह्वगुप्त्यै----क; विश्वगोप्तेति प्रभाविलाससंमतः पाठः ।
 
-[^58]:
-विह्वगुप्त्यै----क; विश्वगोप्तेति प्रभाविलाससंमतः पाठः ।
+[^59]: विदग्धेषु इति प्रभाविलाससंमतः पाठः।
 
-[^59]:
-विदग्धेषु इति प्रभाविलाससंमतः पाठः।
+[^60]: भवतु नाम ---omitted---क
 
-[^60]:
-भवतु नाम ---omitted---क
+[^61]: विद्यां बहुमन्यस्व-----क
 
-[^61]:
-विद्यां बहुमन्यस्व-----क
+[^62]: शृण्वन्त्यार्य मिश्राः   omitted----ग
 
-[^62]:
-शृण्वन्त्यार्य मिश्राः   omitted----ग
+[^63]: औपोद्घातिकी--------च, छ
 
-[^63]:
-औपोद्घातिकी--------च, छ
+[^64]: कुसुमधन्विनि-----घ
 
-[^64]:
-कुसुमधन्विनि-----घ
+[^65]: मयि ---omitted------- क,ख,ग
 
-[^65]:
-मयि ---omitted------- क,ख,ग
+[^66]: ् आशङ्कते -----क
 
-[^66]:
-् आशङ्कते -----क
+[^67]: मद ---omitted---क,ख
 
-[^67]:
-मद ---omitted---क,ख
+[^68]: समेतः----च
 
-[^68]:
-समेतः----च
+[^69]: पाप added before----ka
 
-[^69]:
-पाप added before----ka
+[^70]: अधुना विजृम्भते for उपचितम्द्H=====क; उन्मादी for उपचितमदः:--   ख
 
-[^70]:
-अधुना विजृम्भते for उपचितम्द्H=====क; उन्मादी for उपचितमदः:--   ख
+[^71]: इहदेवस्य for महाराजस्य----क
 
-[^71]:
-इहदेवस्य for महाराजस्य----क
+[^72]: अन्तरीप omitted ---छ,ग
 
-[^72]:
-अन्तरीप omitted ---छ,ग
+[^73]: उत्फुल्ल----घ
 
-[^73]:
-उत्फुल्ल----घ
+[^74]: दुक्खिअ----च
 
-[^74]:
-दुक्खिअ----च
+[^75]: दुःखितं-----ख
 
-[^75]:
-दुःखितं-----ख
+[^76]: विषमशर एवं जीवितेश्वरः, तस्य स्त्रीति पुंयोगे ङीष् । अथवा विषमशरस्य जीवितमीष्टे इति औणादिको वरटू । टित्वात् डीप् ।
 
-[^76]:
-विषमशर एवं जीवितेश्वरः, तस्य स्त्रीति पुंयोगे ङीष् । अथवा विषमशरस्य जीवितमीष्टे इति औणादिको वरटू । टित्वात् डीप् ।
+[^77]: मंस्थाः ----क,ख
 
-[^77]:
-मंस्थाः ----क,ख
+[^78]: घ adds before this, the stanza विकस्वरपिकद्रुम etc. which is in Act 4, stanza 13.
 
-[^78]:
-घ adds before this, the stanza विकस्वरपिकद्रुम etc. which is in Act 4, stanza 13.
+[^79]: धन्वशब्दोऽत्र धनुः पर्यायः
 
-[^79]:
-धन्वशब्दोऽत्र धनुः पर्यायः
+[^80]: विपक्षेऽपि मयि स्थिते------ड, च, छ
 
-[^80]:
-विपक्षेऽपि मयि स्थिते------ड, च, छ
+[^81]: का वा प्रज्ञा--- क
 
-[^81]:
-का वा प्रज्ञा--- क
+[^82]: स्तनतटगतमेतत्स्थौल्यमन्तरेऽपि संक्रामति ----क,ग
 
-[^82]:
-स्तनतटगतमेतत्स्थौल्यमन्तरेऽपि संक्रामति ----क,ग
+[^83]: जनयतु -------क, ख
 
-[^83]:
-जनयतु -------क, ख
+[^84]: मकुट-------क, ख, छ; मणिमकुट---घ
 
-[^84]:
-मकुट-------क, ख, छ; मणिमकुट---घ
+[^85]: सिंहराजस्य-------क, ड, छ
 
-[^85]:
-सिंहराजस्य-------क, ड, छ
+[^86]: प्रतिस्पर्धी-----क
 
-[^86]:
-प्रतिस्पर्धी-----क
+[^87]: तत्र-----ख
 
-[^87]:
-तत्र-----ख
+[^88]: रक्षःपिशाचकुल------च
 
-[^88]:
-रक्षःपिशाचकुल------च
+[^89]: विरचय्य
 
-[^89]:
-विरचय्य
+[^90]: ास्मत्तातेनेत्यारभ्य आरभन्ते इत्यन्तं omitted  ---क
 
-[^90]:
-ास्मत्तातेनेत्यारभ्य आरभन्ते इत्यन्तं omitted  ---क
-
-[^91]:
-न च तदारम्भसमये तातस्य दुर्दशा शक्या वर्णयितुम् । अयं खलु -
+[^91]: न च तदारम्भसमये तातस्य दुर्दशा शक्या वर्णयितुम् । अयं खलु -
 जात्यन्धः परदोषदृष्टिषु परीवादेषु मूकाग्रणी-
 बाधिर्यप्रथमावतारसरणिर्निन्दासमाकर्णने ।
 स्त्रीप्रायः परदारसंग्रहविधौ तद्वत्परावर्जने
 संपद्येत समीक्षणेsपि विकलः पापैर्विवेकादिभिः ॥ "
 added after क, ड, च
 
-[^92]:
-ततः प्रभृति------घ
+[^92]: ततः प्रभृति------घ
 
-[^93]:
-तु omitted-----क
+[^93]: तु omitted-----क
 
-[^94]:
-विणासेदुं कोऊहलं पडिवजन्ति क
+[^94]: विणासेदुं कोऊहलं पडिवजन्ति क
 
-[^95]:
-तह omitted ----क
+[^95]: तह omitted ----क
 
-[^96]:
-समुम्मूलणक्रवमो.----क.
+[^96]: समुम्मूलणक्रवमो.----क.
 
-[^97]:
-विनाशयितुं कौतूहलं प्रतिपद्यन्ते ----क
+[^97]: विनाशयितुं कौतूहलं प्रतिपद्यन्ते ----क
 
-[^98]:
-सतः------क,ग, छ
+[^98]: सतः------क,ग, छ
 
-[^99]:
-राध्यतः---क,ग, छ
+[^99]: राध्यतः---क,ग, छ
 
-[^100]:
-अपि च ----omitted---ग
+[^100]: अपि च ----omitted---ग
 
-[^101]:
-घातकत्वम्----क,ग
+[^101]: घातकत्वम्----क,ग
 
-[^102]:
-कथं खल्वर्थ-----क
+[^102]: कथं खल्वर्थ-----क
 
-[^103]:
-सह added after-----क
+[^103]: सह added after-----क
 
-[^104]:
-न हि क्षुधितोऽपि तरक्षुः---क
+[^104]: न हि क्षुधितोऽपि तरक्षुः---क
 
-[^105]:
-चिंति ओ----च
+[^105]: चिंति ओ----च
 
-[^106]:
-सकौतुकं added before -----ख, ड, छ
+[^106]: सकौतुकं added before -----ख, ड, छ
 
-[^107]:
-विचिन्त्य added before क, ख
+[^107]: विचिन्त्य added before क, ख
 
-[^108]:
-मूकादिवदत्यन्तमपहास्यमवस्थान - क
+[^108]: मूकादिवदत्यन्तमपहास्यमवस्थान - क
 
-[^109]:
-भैमरथी------क, ख
+[^109]: भैमरथी------क, ख
 
-[^110]:
-क्Rणा-------क, ख
+[^110]: क्Rणा-------क, ख
 
-[^111]:
-अपूर्वमिवेति प्रभाविलाससंमतः पाठः
+[^111]: अपूर्वमिवेति प्रभाविलाससंमतः पाठः
 
-[^112]:
-सादरं ----क, घ
+[^112]: सादरं ----क, घ
 
-[^113]:
-अतिनिपुण----ड च छ
+[^113]: अतिनिपुण----ड च छ
 
-[^114]:
-नैगम----क
+[^114]: नैगम----क
 
-[^115]:
-मादृशा  omitted----च, छ
+[^115]: मादृशा  omitted----च, छ
 
-[^116]:
-गाहनमिति प्रभाविलाससंमतः पाठः
+[^116]: गाहनमिति प्रभाविलाससंमतः पाठः
 
-[^117]:
-उत्सेधयिष्यति------घ
+[^117]: उत्सेधयिष्यति------घ
 
-[^118]:
-पापारोपणेन------क
+[^118]: पापारोपणेन------क
 
-[^119]:
-नृशंसानां----क
+[^119]: नृशंसानां----क
 
-[^120]:
-मधुमथन----क
+[^120]: मधुमथन----क
 
-[^121]:
-परमं-----ड
+[^121]: परमं-----ड
 
-[^122]:
-ापि च  omitted---क
+[^122]: ापि च  omitted---क
 
-[^123]:
-अयशो----क, ख
+[^123]: अयशो----क, ख
 
-[^124]:
-विषयवन----क
+[^124]: विषयवन----क
 
-[^125]:
-पापारोपेण----क
+[^125]: पापारोपेण----क
 
-[^126]:
-प्रलपति----ख
+[^126]: प्रलपति----ख
 
-[^127]:
-णिम्मलेसु वि omitted---क
+[^127]: णिम्मलेसु वि omitted---क
 
-[^128]:
-हन्त omitted----क
+[^128]: हन्त omitted----क
 
-[^129]:
-ौन्मत्तप्रलापः-------क
+[^129]: ौन्मत्तप्रलापः-------क
 
-[^130]:
-स^अंप^अ-स्वयंप्रभ इति प्रभावलीसंमतः पाठः।
+[^130]: स^अंप^अ-स्वयंप्रभ इति प्रभावलीसंमतः पाठः।
 
-[^131]:
-संकड----घ
+[^131]: संकड----घ
 
-[^132]:
-सूक्ष्मदर्शिनि----omitted----क
+[^132]: सूक्ष्मदर्शिनि----omitted----क
 
-[^133]:
-एव्वं एदं omitted ---क
+[^133]: एव्वं एदं omitted ---क
 
-[^134]:
-लच्छीवल्लहेण---omitted--घ द च
+[^134]: लच्छीवल्लहेण---omitted--घ द च
 
-[^135]:
-दुम्मि^ओ---क; तावि^ओ इति प्रभावली पाठः
+[^135]: दुम्मि^ओ---क; तावि^ओ इति प्रभावली पाठः
 
-[^136]:
-द्योपराधेन-----ग, च
+[^136]: द्योपराधेन-----ग, च
 
-[^137]:
-अथवा----घ
+[^137]: अथवा----घ
 
-[^138]:
-लंभिज्ज^इत्ति---क
+[^138]: लंभिज्ज^इत्ति---क
 
-[^139]:
-मोक्षिष्यमाणः----क
+[^139]: मोक्षिष्यमाणः----क
 
-[^140]:
-मत्सकाशमादौ-----क
+[^140]: मत्सकाशमादौ-----क
 
-[^141]:
-आश्रितः----ग, ड, च
+[^141]: आश्रितः----ग, ड, च
 
-[^142]:
-“अथ यदिदमस्मिन् ब्रह्मपुरे” इतिश्रुत्यर्थोऽप्यत्र विवक्षितः। शरीरमपि न स्वकीयमिति भावः।
+[^142]: “अथ यदिदमस्मिन् ब्रह्मपुरे” इतिश्रुत्यर्थोऽप्यत्र विवक्षितः। शरीरमपि न स्वकीयमिति भावः।
 
-[^143]:
-परसंमते---ग
+[^143]: परसंमते---ग
 
-[^144]:
-वेट्टिअ----क
+[^144]: वेट्टिअ----क
 
-[^145]:
-दर्शिनि-----क
+[^145]: दर्शिनि-----क
 
-[^146]:
-प्रबोधापि-----क
+[^146]: प्रबोधापि-----क
 
-[^147]:
-बद्धदसा-------क, ग
+[^147]: बद्धदसा-------क, ग
 
-[^148]:
-प्रतिपन्नमेवेति प्रभावली पाठः।
+[^148]: प्रतिपन्नमेवेति प्रभावली पाठः।
 
-[^149]:
-घटिता----घ
+[^149]: घटिता----घ
 
-[^150]:
-आस्थाय-----ग, ड
+[^150]: आस्थाय-----ग, ड
 
-[^151]:
-सो-----ड
+[^151]: सो-----ड
 
-[^152]:
-मुणिअज्जो-----ग
+[^152]: मुणिअज्जो-----ग
 
-[^153]:
-निरीक्षया------ग
+[^153]: निरीक्षया------ग
 
-[^154]:
-अभ्युपपद्यते-----ड
+[^154]: अभ्युपपद्यते-----ड
 
-[^155]:
-दशान्तिमाः-------ध, ड, च
+[^155]: दशान्तिमाः-------ध, ड, च
 
-[^156]:
-तस्यैवम्” इति श्रुतौ आत्मा यजमानः, श्रद्धा पत्नीत्युक्तम् । अत्र तु विवेको यजमानः, सुमतिः पत्नी, आत्मा हविरिति विनिमयः कृत इति ज्ञेयम् ।
+[^156]: तस्यैवम्” इति श्रुतौ आत्मा यजमानः, श्रद्धा पत्नीत्युक्तम् । अत्र तु विवेको यजमानः, सुमतिः पत्नी, आत्मा हविरिति विनिमयः कृत इति ज्ञेयम् ।
 
-[^157]:
-" ब्रह्मणे स्वा महस ओम् " इत्यत्रत्यब्रह्मशब्दार्थ विशृणोति --- भगवानितीति ज्ञेयम् ।
+[^157]: " ब्रह्मणे स्वा महस ओम् " इत्यत्रत्यब्रह्मशब्दार्थ विशृणोति --- भगवानितीति ज्ञेयम् ।
 
-[^158]:
-प्रिये------घ
+[^158]: प्रिये------घ
 
-[^159]:
-स्वामिनि----क
+[^159]: स्वामिनि----क
 
-[^160]:
-ैयं हि   omitted---ca
+[^160]: ैयं हि   omitted---ca
 
-[^161]:
-न्येका-------च, छ
+[^161]: न्येका-------च, छ
 
-[^162]:
-विअ omitted-----ढ, च
+[^162]: विअ omitted-----ढ, च
 
-[^163]:
-दृशा    क, घ, च
+[^163]: दृशा    क, घ, च
 
-[^164]:
-संरब्धः-------क,ग
+[^164]: संरब्धः-------क,ग
 
-[^165]:
-विराध्यतु इति प्रभावली पाठः
+[^165]: विराध्यतु इति प्रभावली पाठः
 
-[^166]:
-पुनः
+[^166]: पुनः
 
-[^167]:
-सृष्टिस्थितिमति--------क
+[^167]: सृष्टिस्थितिमति--------क
 
-[^168]:
-पूर्त्यै----ध
+[^168]: पूर्त्यै----ध
 
-[^169]:
-सुरगणानिति बहुवचनेन संभूयापि सुरगणाः सर्वे मोक्षदाने असमर्था इति व्यज्यते । अतएव प्रालेयैरिति दृष्टान्तेऽपि बहुवचनम् ।
+[^169]: सुरगणानिति बहुवचनेन संभूयापि सुरगणाः सर्वे मोक्षदाने असमर्था इति व्यज्यते । अतएव प्रालेयैरिति दृष्टान्तेऽपि बहुवचनम् ।
 
-[^170]:
-ननु न सहस्रमप्यालेख्य दिवाकराः---छ
+[^170]: ननु न सहस्रमप्यालेख्य दिवाकराः---छ
 
-[^171]:
-कस्य----च
+[^171]: कस्य----च
 
-[^172]:
-नारायणानाम्----क
+[^172]: नारायणानाम्----क
 
-[^173]:
-विहितैः----च
+[^173]: विहितैः----च
 
-[^174]:
-स्वान्ते-----ग
+[^174]: स्वान्ते-----ग
 
-[^175]:
-प्रवर्तयन्त्य-------क,ख,ड
+[^175]: प्रवर्तयन्त्य-------क,ख,ड
 
-[^176]:
-महर्षयः----क
+[^176]: महर्षयः----क
 
-[^177]:
-परिगृह्णाति-----च
+[^177]: परिगृह्णाति-----च
 
-[^178]:
-सानन्दम् added before----च, छ
+[^178]: सानन्दम् added before----च, छ
 
-[^179]:
-विकलां स्मृतिं-----क
+[^179]: विकलां स्मृतिं-----क
 
-[^180]:
-महता-----ग
+[^180]: महता-----ग
 
-[^181]:
-मुक्तिश्रियं----ड,च,छ
+[^181]: मुक्तिश्रियं----ड,च,छ
 
-[^182]:
-मुनिगणेति प्रभावलीपाठः
+[^182]: मुनिगणेति प्रभावलीपाठः
 
-[^183]:
-ाहोबिलनाम्ना विदुषा विरचिते-------A
+[^183]: ाहोबिलनाम्ना विदुषा विरचिते-------A
